--- a/www/templates/kompas.html
+++ b/www/templates/kompas.html
@@ -1,5 +1,5 @@
-<ion-view view-title="Kompas">
+<ion-view view-title="Senter">
   <ion-content>
-    <h1>Kompas</h1>
+    <h1>Senter</h1>
   </ion-content>
 </ion-view>
